--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+before_install: rvm use $RVM_RUBY_VERSION
+install: bundle install --without=documentation --path ../travis_bundle_dir
+after_success: slather
 language: objective-c
 script:
  - xcodebuild -workspace sour-mash.xcworkspace -scheme sour-mash -sdk iphonesimulator build test
