--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
-before_install: rvm use $RVM_RUBY_VERSION
-install: bundle install --without=documentation --path ../travis_bundle_dir
-after_success: slather
-language: objective-c
-script:
- - xcodebuild -workspace sour-mash.xcworkspace -scheme sour-mash -sdk iphonesimulator build test
-xcode_workspace: sour-mash.xcworkspace
-xcode_scheme: sour-mash
 osx_image: xcode7.3
-xcode_sdk: iphonesimulator9.3
+language: objective-c
+before_install: gem install xcpretty  slather -N
+script:
+ set -o pipefail && xcodebuild -workspace sour-mash.xcworkspace
+  -scheme sour-mash -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 6"
+  GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES clean test | xcpretty -c
+after_success: slather
