--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 osx_image: xcode7.3
 language: objective-c
-before_install: gem install xcpretty  slather -N
+before_install: rvm use $RVM_RUBY_VERSION
+install: bundle install --without=documentation --path ../travis_bundle_dir
+env:
+- LC_CTYPE=en_US.UTF-8 LANG=en_US.UTF-8
 script:
  set -o pipefail && xcodebuild -workspace sour-mash.xcworkspace
   -scheme sour-mash -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 6"
