--- a/.slather.yml
+++ b/.slather.yml
@@ -1,4 +1,4 @@
 coverage_service: coveralls
-xcworkspace: sour-mash.xcworkspace
+workspace: sour-mash.xcworkspace
 xcodeproj: sour-mash/sour-mash.xcodeproj
 scheme: sour-mash
