--- a/sour-mash/sour-mash.xcodeproj/xcshareddata/xcschemes/sour-mash.xcscheme
+++ b/sour-mash/sour-mash.xcodeproj/xcshareddata/xcschemes/sour-mash.xcscheme
@@ -54,19 +54,8 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8932664D1D5E7496005DBDA2"
-               BuildableName = "sour-mashTests.xctest"
-               BlueprintName = "sour-mashTests"
-               ReferencedContainer = "container:sour-mash.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
          <TestableReference
             skipped = "NO">
             <BuildableReference
@@ -74,6 +63,16 @@
                BlueprintIdentifier = "893266581D5E7496005DBDA2"
                BuildableName = "sour-mashUITests.xctest"
                BlueprintName = "sour-mashUITests"
+               ReferencedContainer = "container:sour-mash.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "8932664D1D5E7496005DBDA2"
+               BuildableName = "sour-mashTests.xctest"
+               BlueprintName = "sour-mashTests"
                ReferencedContainer = "container:sour-mash.xcodeproj">
             </BuildableReference>
          </TestableReference>
